--- a/index.html
+++ b/index.html
@@ -8,43 +8,36 @@
 <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; }
-body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; background: #000000; color: #ffffff; overflow-x: hidden; }
+body { background: #000000; color: #ffffff; overflow-x: hidden; }
 .gradient-bg { background: linear-gradient(to bottom, #1a1a1a, #000000); }
 .gradient-border { border: 1px solid rgba(245, 158, 11, 0.2); }
 .sidebar { transition: width 0.3s ease-in-out; width: 14rem; min-width: 14rem; }
 .sidebar.collapsed { width: 4rem; min-width: 4rem; }
 .menu-item { transition: all 0.2s ease-in-out; }
 .menu-item:hover { background-color: rgba(31, 41, 55, 0.5); transform: translateX(4px); }
-.menu-item.active { background: linear-gradient(to right, rgba(245, 158, 11, 0.2), rgba(234, 179, 8, 0.2)); color: #f59e0b; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); }
-.crypto-icon { width: 2.5rem; height: 2.5rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 0.75rem; color: #000; overflow: hidden; }
+.menu-item.active { background: linear-gradient(to right, rgba(245, 158, 11, 0.2), rgba(234, 179, 8, 0.2)); color: #f59e0b; }
 .crypto-icon img { width: 100%; height: 100%; object-fit: cover; border-radius: 0.75rem; }
-.profile-picture { width: 2rem; height: 2rem; border-radius: 50%; overflow: hidden; display: flex; align-items: center; justify-content: center; }
 .profile-picture img { width: 100%; height: 100%; object-fit: cover; }
 .page-content { opacity: 0; transform: translateY(20px); transition: all 0.3s ease; display: none; }
 .page-content.active { opacity: 1; transform: translateY(0); display: block; }
-.stat-box, .node-card, .step-card, .faq-item { background: rgba(31, 41, 55, 0.5); border: 1px solid rgba(75, 85, 99, 0.5); border-radius: 0.75rem; padding: 1.5rem; transition: all 0.3s ease; }
+.stat-box { background: rgba(31, 41, 55, 0.5); border: 1px solid rgba(75, 85, 99, 0.5); border-radius: 0.75rem; padding: 1.5rem; transition: all 0.3s ease; }
 .action-button { background: linear-gradient(145deg, #f59e0b, #d97706); color: #000; font-weight: 600; padding: 0.75rem 1.5rem; border-radius: 0.5rem; transition: all 0.3s ease; display: inline-flex; align-items: center; gap: 0.5rem; }
 .action-button:hover { background: linear-gradient(145deg, #d97706, #b45309); transform: translateY(-2px); box-shadow: 0 6px 20px rgba(245, 158, 11, 0.4); }
+.gallery-img { transition: all 0.3s ease; }
+.gallery-img:hover { transform: scale(1.05); box-shadow: 0 0 0 3px rgba(245, 158, 11, 0.5); }
 </style>
 </head>
 <body>
-<div class="min-h-screen bg-black text-white flex main-container">
+<div class="min-h-screen bg-black text-white flex">
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar h-screen gradient-bg gradient-border">
         <div class="p-3 border-b border-amber-500/20">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-2">
-                    <div class="crypto-icon">
-                        <img src="https://i.ibb.co/qYBkPDH3/Picsart-25-04-01-16-25-47-054.png" alt="BossX Logo">
-                    </div>
-                    <div id="logo-text">
-                        <h1 class="text-lg font-bold text-amber-400">BossX</h1>
-                        <p class="text-xs text-gray-400">Key Node System</p>
-                    </div>
+                    <div class="crypto-icon"><img src="https://i.ibb.co/qYBkPDH3/Picsart-25-04-01-16-25-47-054.png" alt="BossX"></div>
+                    <div id="logo-text"><h1 class="text-lg font-bold text-amber-400">BossX</h1><p class="text-xs text-gray-400">Key Node System</p></div>
                 </div>
-                <button id="toggle-sidebar" class="text-gray-400 hover:text-amber-400 hover:bg-amber-500/10 p-1 rounded">
-                    <i data-lucide="chevron-left"></i>
-                </button>
+                <button id="toggle-sidebar" class="text-gray-400 hover:text-amber-400 p-1 rounded"><i data-lucide="chevron-left"></i></button>
             </div>
         </div>
         <nav class="mt-4 px-2">
@@ -56,97 +49,69 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Ox
     </div>
 
     <!-- Main Content -->
-    <div class="flex-1 flex flex-col min-w-0">
+    <div class="flex-1 flex flex-col">
         <header class="bg-gradient-to-r from-gray-900 via-black to-gray-900 border-b border-amber-500/20 px-4 py-3">
             <div class="flex items-center justify-between">
-                <div class="flex flex-col">
-                    <div id="time" class="text-amber-400 text-lg font-bold">00:00:00</div>
-                    <div id="date" class="text-gray-400 text-sm">Loading...</div>
-                </div>
-                <div class="flex-1 max-w-sm mx-4">
-                    <div class="relative">
-                        <i data-lucide="search" class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400 w-4 h-4"></i>
-                        <input type="text" placeholder="Cari node, transaksi..." class="w-full pl-10 pr-4 py-2 bg-gray-800/50 border border-gray-700 rounded-lg text-white placeholder-gray-400 focus:border-amber-500 focus:outline-none focus:ring-1 focus:ring-amber-500/20">
-                    </div>
+                <div class="flex flex-col"><div id="time" class="text-amber-400 text-lg font-bold">00:00:00</div><div id="date" class="text-gray-400 text-sm">Loading...</div></div>
+                <div class="flex-1 max-w-sm mx-4 relative">
+                    <i data-lucide="search" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 w-4 h-4"></i>
+                    <input type="text" placeholder="Cari node, transaksi..." class="w-full pl-10 pr-4 py-2 bg-gray-800/50 border border-gray-700 rounded-lg text-white placeholder-gray-400 focus:border-amber-500">
                 </div>
                 <div class="flex items-center space-x-3">
-                    <a href="#" class="flex items-center space-x-2 px-2 py-1 bg-green-500/10 rounded-lg border border-green-500/20 hover:bg-green-500/20 transition-colors">
-                        <i data-lucide="globe" class="w-4 h-4 text-green-400"></i>
-                        <span class="text-green-400 text-sm font-medium">Market Open</span>
-                    </a>
-                    <button class="relative text-gray-400 hover:text-amber-400 hover:bg-amber-500/10 p-2 rounded">
-                        <i data-lucide="bell" class="w-4 h-4"></i>
-                        <span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full w-4 h-4 flex items-center justify-center">3</span>
-                    </button>
-                    <div class="flex items-center space-x-2 px-2 py-1 bg-gray-800/50 rounded-lg border border-gray-700 hover:border-amber-500/50 transition-colors cursor-pointer">
-                        <div class="profile-picture">
-                            <img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="Fery Muliawan">
-                        </div>
-                        <div class="text-sm">
-                            <p class="text-white font-medium">Fery Muliawan</p>
-                            <p class="text-amber-400 text-xs">Validator: 8055x</p>
-                        </div>
+                    <a href="#" class="flex items-center space-x-2 px-2 py-1 bg-green-500/10 rounded-lg border border-green-500/20"><i data-lucide="globe" class="w-4 h-4 text-green-400"></i><span class="text-green-400 text-sm font-medium">Market Open</span></a>
+                    <button class="relative text-gray-400 hover:text-amber-400 p-2 rounded"><i data-lucide="bell" class="w-4 h-4"></i><span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full w-4 h-4 flex items-center justify-center">3</span></button>
+                    <div class="flex items-center space-x-2 px-2 py-1 bg-gray-800/50 rounded-lg border border-gray-700">
+                        <div class="profile-picture"><img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="Fery"></div>
+                        <div><p class="text-white font-medium">Fery Muliawan</p><p class="text-amber-400 text-xs">Validator: 8055x</p></div>
                     </div>
                 </div>
             </div>
         </header>
 
-        <main class="flex-1 overflow-auto">
-            <div id="content" class="content-container space-y-4">
-                <!-- HALAMAN KEY NODE (PENJUALAN MESIN MINING) -->
-                <div id="key-node-page" class="page-content active">
-                    <div class="hero-section text-center">
-                        <div class="max-w-5xl mx-auto">
-                            <div class="inline-flex items-center gap-2 bg-amber-500/10 text-amber-400 px-6 py-3 rounded-full mb-6 text-sm font-medium">
-                                <i data-lucide="zap" class="w-5 h-5"></i>
-                                READY STOCK • GARANSI 1 TAHUN • BISA COD JAKARTA
-                            </div>
-                            <h1 class="text-5xl font-bold mb-3">Mesin Mining BossX Pro</h1>
-                            <p class="text-2xl text-gray-300 mb-8">13 GPU Ready • Hemat Listrik • Profit Tinggi</p>
-                            
-                            <!-- GAMBAR MESIN KAMU -->
-                            <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" 
-                                 class="w-full max-h-[520px] object-cover rounded-3xl shadow-2xl border border-amber-500/30 mx-auto"
-                                 alt="Mesin Mining BossX Pro - Fery Muliawan">
-                            
-                            <div class="mt-10 flex flex-col sm:flex-row gap-4 justify-center">
-                                <button onclick="beliMesin()" 
-                                        class="action-button text-xl px-10 py-5 rounded-2xl flex items-center justify-center gap-3 text-black font-bold">
-                                    <i data-lucide="shopping-cart" class="w-7 h-7"></i>
-                                    BELI SEKARANG - Rp 12.500.000
-                                </button>
-                                <button onclick="lihatSpesifikasi()" 
-                                        class="px-10 py-5 bg-transparent border-2 border-amber-400 text-amber-400 hover:bg-amber-400 hover:text-black rounded-2xl text-xl font-medium transition">
-                                    Lihat Spesifikasi
-                                </button>
-                            </div>
+        <main class="flex-1 overflow-auto p-6">
+            <div id="key-node-page" class="page-content active">
+                <!-- Hero + Gambar Utama -->
+                <div class="hero-section text-center mb-12">
+                    <div class="max-w-5xl mx-auto">
+                        <div class="inline-flex items-center gap-2 bg-amber-500/10 text-amber-400 px-6 py-3 rounded-full mb-6 text-sm font-medium">
+                            <i data-lucide="zap" class="w-5 h-5"></i> READY STOCK • GARANSI 1 TAHUN • COD JAKARTA
                         </div>
+                        <h1 class="text-5xl font-bold mb-3">Mesin Mining BossX Pro</h1>
+                        <p class="text-2xl text-gray-300 mb-8">13 GPU Ready • Hemat Listrik • Profit Tinggi</p>
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="w-full max-h-[520px] object-cover rounded-3xl shadow-2xl border border-amber-500/30 mx-auto" alt="Mesin Mining BossX Pro">
                     </div>
+                </div>
 
-                    <div class="bg-gray-900 border border-amber-500/20 rounded-3xl p-8 mt-8">
-                        <h2 class="text-2xl font-bold mb-6 text-center">Galeri Mesin Mining BossX</h2>
-                        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-                            <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="rounded-2xl cursor-pointer hover:scale-105 transition border border-amber-500/30" alt="Mining Rig">
-                        </div>
+                <!-- 4 GAMBAR ATAS -->
+                <div class="mb-12">
+                    <h2 class="text-2xl font-bold mb-6 text-center">Galeri Atas</h2>
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 1">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 2">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 3">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 4">
                     </div>
+                </div>
 
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
-                        <div class="stat-box text-center">
-                            <i data-lucide="cpu" class="w-10 h-10 mx-auto mb-4 text-amber-400"></i>
-                            <p class="font-bold text-xl">13x RTX 3060 Ti</p>
-                            <p class="text-gray-400">Hashrate tinggi</p>
-                        </div>
-                        <div class="stat-box text-center">
-                            <i data-lucide="zap" class="w-10 h-10 mx-auto mb-4 text-green-400"></i>
-                            <p class="font-bold text-xl">850W Total</p>
-                            <p class="text-gray-400">Super hemat listrik</p>
-                        </div>
-                        <div class="stat-box text-center">
-                            <i data-lucide="award" class="w-10 h-10 mx-auto mb-4 text-amber-400"></i>
-                            <p class="font-bold text-xl">Garansi 12 Bulan</p>
-                            <p class="text-gray-400">Service center Jakarta</p>
-                        </div>
+                <!-- 4 GAMBAR BAWAH -->
+                <div>
+                    <h2 class="text-2xl font-bold mb-6 text-center">Galeri Bawah</h2>
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 5">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 6">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 7">
+                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 8">
                     </div>
+                </div>
+
+                <!-- Tombol Beli + Spesifikasi -->
+                <div class="mt-12 flex flex-col sm:flex-row gap-4 justify-center">
+                    <button onclick="beliMesin()" class="action-button text-xl px-10 py-5 rounded-2xl flex items-center justify-center gap-3 text-black font-bold">
+                        <i data-lucide="shopping-cart" class="w-7 h-7"></i> BELI SEKARANG - Rp 12.500.000
+                    </button>
+                    <button onclick="lihatSpesifikasi()" class="px-10 py-5 bg-transparent border-2 border-amber-400 text-amber-400 hover:bg-amber-400 hover:text-black rounded-2xl text-xl font-medium transition">
+                        Lihat Spesifikasi Lengkap
+                    </button>
                 </div>
             </div>
         </main>
@@ -154,30 +119,26 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Ox
 </div>
 
 <script>
-// Initialize Lucide icons
+// Lucide & Clock
 function initIcons() { lucide.createIcons(); }
-
-// Real-time Clock
 function updateClock() {
     const now = new Date();
-    document.getElementById('time').textContent = now.toLocaleTimeString('id-ID', { hour12: false, hour: '2-digit', minute: '2-digit', second: '2-digit' });
-    document.getElementById('date').textContent = now.toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+    document.getElementById('time').textContent = now.toLocaleTimeString('id-ID', {hour12:false, hour:'2-digit', minute:'2-digit', second:'2-digit'});
+    document.getElementById('date').textContent = now.toLocaleDateString('id-ID', {weekday:'long', year:'numeric', month:'long', day:'numeric'});
 }
 
-// Tombol Beli Sekarang
+// Beli & Spesifikasi
 function beliMesin() {
-    const nomorWA = "628XXXXXXXXXX"; // GANTI DENGAN NOMOR WA KAMU
-    const pesan = "Halo Fery, saya tertarik beli Mesin Mining BossX Pro. Mau tanya detailnya.";
+    const nomorWA = "628XXXXXXXXXX"; // GANTI NOMOR WA KAMU
+    const pesan = "Halo Fery, saya tertarik beli Mesin Mining BossX Pro.";
     window.open(`https://wa.me/${nomorWA}?text=${encodeURIComponent(pesan)}`, '_blank');
 }
-
-// Tombol Spesifikasi
 function lihatSpesifikasi() {
-    alert("Spesifikasi Lengkap Mesin Mining BossX Pro:\n\n• 13x RTX 3060 Ti\n• Motherboard Mining Specialized\n• PSU 1600W Gold 80+\n• Frame Besi Full Black\n• Ready Stock Jakarta\n• Garansi 12 Bulan\n\nMau saya kirim full list via WA?");
+    alert("Spesifikasi Mesin Mining BossX Pro:\n• 13x RTX 3060 Ti\n• PSU 1600W Gold\n• Frame Besi Full Black\n• Garansi 12 Bulan\n• Ready Stock Jakarta");
 }
 
-// Sidebar toggle & lainnya (sama seperti asli)
-document.addEventListener('DOMContentLoaded', function() {
+// Init
+document.addEventListener('DOMContentLoaded', () => {
     initIcons();
     updateClock();
     setInterval(updateClock, 1000);
@@ -187,16 +148,12 @@ document.addEventListener('DOMContentLoaded', function() {
     const logoText = document.getElementById('logo-text');
     const menuTexts = document.querySelectorAll('.menu-text');
 
-    if (toggleBtn) {
-        toggleBtn.addEventListener('click', function() {
-            const toggleIcon = this.querySelector('[data-lucide]');
-            sidebar.classList.toggle('collapsed');
-            if (logoText) logoText.style.display = sidebar.classList.contains('collapsed') ? 'none' : 'block';
-            menuTexts.forEach(text => text.style.display = sidebar.classList.contains('collapsed') ? 'none' : 'inline');
-            if (toggleIcon) toggleIcon.setAttribute('data-lucide', sidebar.classList.contains('collapsed') ? 'chevron-right' : 'chevron-left');
-            initIcons();
-        });
-    }
+    toggleBtn.addEventListener('click', () => {
+        sidebar.classList.toggle('collapsed');
+        logoText.style.display = sidebar.classList.contains('collapsed') ? 'none' : 'block';
+        menuTexts.forEach(t => t.style.display = sidebar.classList.contains('collapsed') ? 'none' : 'inline');
+        initIcons();
+    });
 });
 </script>
 </body>
