--- a/index.html
+++ b/index.html
@@ -7,28 +7,21 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 <style>
-* { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; }
-body { background: #000000; color: #ffffff; overflow-x: hidden; }
-.gradient-bg { background: linear-gradient(to bottom, #1a1a1a, #000000); }
-.gradient-border { border: 1px solid rgba(245, 158, 11, 0.2); }
-.sidebar { transition: width 0.3s ease-in-out; width: 14rem; min-width: 14rem; }
-.sidebar.collapsed { width: 4rem; min-width: 4rem; }
-.menu-item { transition: all 0.2s ease-in-out; }
-.menu-item:hover { background-color: rgba(31, 41, 55, 0.5); transform: translateX(4px); }
-.menu-item.active { background: linear-gradient(to right, rgba(245, 158, 11, 0.2), rgba(234, 179, 8, 0.2)); color: #f59e0b; }
-.crypto-icon img { width: 100%; height: 100%; object-fit: cover; border-radius: 0.75rem; }
-.profile-picture img { width: 100%; height: 100%; object-fit: cover; }
-.page-content { opacity: 0; transform: translateY(20px); transition: all 0.3s ease; display: none; }
-.page-content.active { opacity: 1; transform: translateY(0); display: block; }
-.stat-box { background: rgba(31, 41, 55, 0.5); border: 1px solid rgba(75, 85, 99, 0.5); border-radius: 0.75rem; padding: 1.5rem; transition: all 0.3s ease; }
-.action-button { background: linear-gradient(145deg, #f59e0b, #d97706); color: #000; font-weight: 600; padding: 0.75rem 1.5rem; border-radius: 0.5rem; transition: all 0.3s ease; display: inline-flex; align-items: center; gap: 0.5rem; }
-.action-button:hover { background: linear-gradient(145deg, #d97706, #b45309); transform: translateY(-2px); box-shadow: 0 6px 20px rgba(245, 158, 11, 0.4); }
-.gallery-img { transition: all 0.3s ease; }
-.gallery-img:hover { transform: scale(1.05); box-shadow: 0 0 0 3px rgba(245, 158, 11, 0.5); }
+* { margin:0; padding:0; box-sizing:border-box; font-family:system-ui,sans-serif; }
+body { background:#000; color:#fff; overflow-x:hidden; }
+.gradient-bg { background:linear-gradient(to bottom,#1a1a1a,#000); }
+.gradient-border { border:1px solid rgba(245,158,11,0.2); }
+.sidebar { transition:width .3s; width:14rem; min-width:14rem; }
+.sidebar.collapsed { width:4rem; min-width:4rem; }
+.menu-item.active { background:linear-gradient(to right,rgba(245,158,11,0.2),rgba(234,179,8,0.2)); color:#f59e0b; }
+.action-button { background:linear-gradient(145deg,#f59e0b,#d97706); color:#000; font-weight:600; padding:0.75rem 1.5rem; border-radius:0.5rem; }
+.action-button:hover { transform:translateY(-2px); box-shadow:0 6px 20px rgba(245,158,11,0.4); }
+.gallery-img { transition:all .3s; }
+.gallery-img:hover { transform:scale(1.05); box-shadow:0 0 0 4px rgba(245,158,11,0.4); }
 </style>
 </head>
 <body>
-<div class="min-h-screen bg-black text-white flex">
+<div class="min-h-screen bg-black text-white flex main-container">
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar h-screen gradient-bg gradient-border">
         <div class="p-3 border-b border-amber-500/20">
@@ -48,69 +41,72 @@ body { background: #000000; color: #ffffff; overflow-x: hidden; }
         </nav>
     </div>
 
-    <!-- Main Content -->
+    <!-- Main Area -->
     <div class="flex-1 flex flex-col">
-        <header class="bg-gradient-to-r from-gray-900 via-black to-gray-900 border-b border-amber-500/20 px-4 py-3">
-            <div class="flex items-center justify-between">
-                <div class="flex flex-col"><div id="time" class="text-amber-400 text-lg font-bold">00:00:00</div><div id="date" class="text-gray-400 text-sm">Loading...</div></div>
-                <div class="flex-1 max-w-sm mx-4 relative">
-                    <i data-lucide="search" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 w-4 h-4"></i>
-                    <input type="text" placeholder="Cari node, transaksi..." class="w-full pl-10 pr-4 py-2 bg-gray-800/50 border border-gray-700 rounded-lg text-white placeholder-gray-400 focus:border-amber-500">
+        <!-- HEADER YANG SUDAH DIPERBAIKI -->
+        <header class="bg-gradient-to-r from-gray-900 via-black to-gray-900 border-b border-amber-500/20 px-6 h-16 flex items-center">
+            <div class="flex items-center justify-between w-full">
+                <!-- Jam & Tanggal -->
+                <div class="flex flex-col">
+                    <div id="time" class="text-amber-400 text-lg font-bold">00:00:00</div>
+                    <div id="date" class="text-gray-400 text-xs">Loading...</div>
                 </div>
-                <div class="flex items-center space-x-3">
-                    <a href="#" class="flex items-center space-x-2 px-2 py-1 bg-green-500/10 rounded-lg border border-green-500/20"><i data-lucide="globe" class="w-4 h-4 text-green-400"></i><span class="text-green-400 text-sm font-medium">Market Open</span></a>
-                    <button class="relative text-gray-400 hover:text-amber-400 p-2 rounded"><i data-lucide="bell" class="w-4 h-4"></i><span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full w-4 h-4 flex items-center justify-center">3</span></button>
-                    <div class="flex items-center space-x-2 px-2 py-1 bg-gray-800/50 rounded-lg border border-gray-700">
-                        <div class="profile-picture"><img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="Fery"></div>
-                        <div><p class="text-white font-medium">Fery Muliawan</p><p class="text-amber-400 text-xs">Validator: 8055x</p></div>
+                <!-- Search -->
+                <div class="flex-1 max-w-md mx-8">
+                    <div class="relative">
+                        <i data-lucide="search" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 w-4 h-4"></i>
+                        <input type="text" placeholder="Cari node atau mesin..." 
+                               class="w-full pl-10 pr-4 py-2 bg-gray-800 border border-gray-700 rounded-xl text-sm focus:border-amber-500 focus:outline-none">
+                    </div>
+                </div>
+                <!-- Right side -->
+                <div class="flex items-center gap-4">
+                    <a href="#" class="flex items-center gap-2 px-3 py-1 bg-green-500/10 rounded-xl border border-green-500/20 text-green-400 text-sm">
+                        <i data-lucide="globe" class="w-4 h-4"></i> Market Open
+                    </a>
+                    <button class="relative text-gray-400 hover:text-amber-400 p-2"><i data-lucide="bell" class="w-5 h-5"></i><span class="absolute -top-1 -right-1 bg-red-500 text-[10px] w-4 h-4 flex items-center justify-center rounded-full">3</span></button>
+                    <div class="flex items-center gap-3 pl-4 border-l border-gray-700">
+                        <div class="profile-picture w-8 h-8 rounded-full overflow-hidden"><img src="https://i.ibb.co/gbVsGLy0/FB-IMG-1617237754232.jpg" alt="Fery"></div>
+                        <div><p class="text-sm font-medium">Fery Muliawan</p><p class="text-amber-400 text-xs">Validator 8055x</p></div>
                     </div>
                 </div>
             </div>
         </header>
 
+        <!-- Content -->
         <main class="flex-1 overflow-auto p-6">
             <div id="key-node-page" class="page-content active">
-                <!-- Hero + Gambar Utama -->
-                <div class="hero-section text-center mb-12">
-                    <div class="max-w-5xl mx-auto">
-                        <div class="inline-flex items-center gap-2 bg-amber-500/10 text-amber-400 px-6 py-3 rounded-full mb-6 text-sm font-medium">
-                            <i data-lucide="zap" class="w-5 h-5"></i> READY STOCK • GARANSI 1 TAHUN • COD JAKARTA
-                        </div>
-                        <h1 class="text-5xl font-bold mb-3">Mesin Mining BossX Pro</h1>
-                        <p class="text-2xl text-gray-300 mb-8">13 GPU Ready • Hemat Listrik • Profit Tinggi</p>
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="w-full max-h-[520px] object-cover rounded-3xl shadow-2xl border border-amber-500/30 mx-auto" alt="Mesin Mining BossX Pro">
+                <!-- Hero -->
+                <div class="text-center mb-12">
+                    <div class="inline-flex bg-amber-500/10 text-amber-400 px-6 py-3 rounded-full text-sm font-medium mb-6">
+                        <i data-lucide="zap" class="w-5 h-5 mr-2"></i> READY STOCK • GARANSI 1 TAHUN • COD JAKARTA
                     </div>
+                    <h1 class="text-5xl font-bold mb-2">Mesin Mining BossX Pro</h1>
+                    <p class="text-2xl text-gray-300">13 GPU • Hemat Listrik • Profit Tinggi</p>
                 </div>
 
                 <!-- 4 GAMBAR ATAS -->
-                <div class="mb-12">
-                    <h2 class="text-2xl font-bold mb-6 text-center">Galeri Atas</h2>
-                    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 1">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 2">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 3">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 4">
-                    </div>
+                <h2 class="text-2xl font-bold mb-6 text-center">Galeri Atas</h2>
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-12">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 1">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 2">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 3">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 4">
                 </div>
 
                 <!-- 4 GAMBAR BAWAH -->
-                <div>
-                    <h2 class="text-2xl font-bold mb-6 text-center">Galeri Bawah</h2>
-                    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 5">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 6">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 7">
-                        <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-2xl border border-amber-500/30" alt="Mesin Mining 8">
-                    </div>
+                <h2 class="text-2xl font-bold mb-6 text-center">Galeri Bawah</h2>
+                <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 5">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 6">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 7">
+                    <img src="https://i.ibb.co.com/tphwj0vz/f95c96fe-ffe6-430d-986d-283ab289537d.jpg" class="gallery-img w-full rounded-3xl border border-amber-500/30" alt="Mining 8">
                 </div>
 
-                <!-- Tombol Beli + Spesifikasi -->
-                <div class="mt-12 flex flex-col sm:flex-row gap-4 justify-center">
-                    <button onclick="beliMesin()" class="action-button text-xl px-10 py-5 rounded-2xl flex items-center justify-center gap-3 text-black font-bold">
+                <!-- Tombol -->
+                <div class="mt-12 flex justify-center gap-6">
+                    <button onclick="beliMesin()" class="action-button text-xl px-12 py-6 rounded-3xl flex items-center gap-4">
                         <i data-lucide="shopping-cart" class="w-7 h-7"></i> BELI SEKARANG - Rp 12.500.000
-                    </button>
-                    <button onclick="lihatSpesifikasi()" class="px-10 py-5 bg-transparent border-2 border-amber-400 text-amber-400 hover:bg-amber-400 hover:text-black rounded-2xl text-xl font-medium transition">
-                        Lihat Spesifikasi Lengkap
                     </button>
                 </div>
             </div>
@@ -119,39 +115,23 @@ body { background: #000000; color: #ffffff; overflow-x: hidden; }
 </div>
 
 <script>
-// Lucide & Clock
-function initIcons() { lucide.createIcons(); }
-function updateClock() {
-    const now = new Date();
-    document.getElementById('time').textContent = now.toLocaleTimeString('id-ID', {hour12:false, hour:'2-digit', minute:'2-digit', second:'2-digit'});
-    document.getElementById('date').textContent = now.toLocaleDateString('id-ID', {weekday:'long', year:'numeric', month:'long', day:'numeric'});
+// Lucide + Clock
+function initIcons(){lucide.createIcons();}
+function updateClock(){
+    const n=new Date();
+    document.getElementById('time').textContent=n.toLocaleTimeString('id-ID',{hour12:false,hour:'2-digit',minute:'2-digit',second:'2-digit'});
+    document.getElementById('date').textContent=n.toLocaleDateString('id-ID',{weekday:'long',year:'numeric',month:'long',day:'numeric'});
 }
-
-// Beli & Spesifikasi
-function beliMesin() {
-    const nomorWA = "628XXXXXXXXXX"; // GANTI NOMOR WA KAMU
-    const pesan = "Halo Fery, saya tertarik beli Mesin Mining BossX Pro.";
-    window.open(`https://wa.me/${nomorWA}?text=${encodeURIComponent(pesan)}`, '_blank');
-}
-function lihatSpesifikasi() {
-    alert("Spesifikasi Mesin Mining BossX Pro:\n• 13x RTX 3060 Ti\n• PSU 1600W Gold\n• Frame Besi Full Black\n• Garansi 12 Bulan\n• Ready Stock Jakarta");
+function beliMesin(){
+    const wa="628XXXXXXXXXX"; // GANTI NOMOR WA KAMU
+    window.open(`https://wa.me/${wa}?text=Halo Fery, saya mau beli Mesin Mining BossX Pro`,'_blank');
 }
 
 // Init
-document.addEventListener('DOMContentLoaded', () => {
-    initIcons();
-    updateClock();
-    setInterval(updateClock, 1000);
-
-    const toggleBtn = document.getElementById('toggle-sidebar');
-    const sidebar = document.getElementById('sidebar');
-    const logoText = document.getElementById('logo-text');
-    const menuTexts = document.querySelectorAll('.menu-text');
-
-    toggleBtn.addEventListener('click', () => {
-        sidebar.classList.toggle('collapsed');
-        logoText.style.display = sidebar.classList.contains('collapsed') ? 'none' : 'block';
-        menuTexts.forEach(t => t.style.display = sidebar.classList.contains('collapsed') ? 'none' : 'inline');
+document.addEventListener('DOMContentLoaded',()=>{
+    initIcons(); updateClock(); setInterval(updateClock,1000);
+    document.getElementById('toggle-sidebar').addEventListener('click',()=>{
+        document.getElementById('sidebar').classList.toggle('collapsed');
         initIcons();
     });
 });
